src/main/java/com/example/payment/errors/exceptions/LoginDisabledException.java
package com.example.payment.errors.exceptions;

public class LoginDisabledException extends Exception{
    public LoginDisabledException(String message) {
        super(message);
    }
}
